--- a/src/static/pages/accessibility.html
+++ b/src/static/pages/accessibility.html
@@ -49,12 +49,12 @@
     </div>
     <footer>
       <br><hr>
-      <div style="display: inline; margin-top: 0px; text-decoration: none;"  class="auth-buttons"><a href="/src\static\pages\login.html">Login</a> | <a href="/src\static\pages\register.html">Register</a> | <a href="/src\static\pages\contact.html">Contact</a> | <a href="/src\static\pages\cart.html">Cart</a></div>
+      <div style="display: inline; margin-top: 0px; text-decoration: none;"  class="auth-buttons"><a href="/src/static/pages/login.html">Login</a> | <a href="/src/static/pages/register.html">Register</a> | <a href="/src/static/pages/contact.html">Contact</a> | <a href="/src/static/pages/cart.html">Cart</a></div>
       <br>
       <div class="ref-buttons">
-         <a style="font-size: 12px; text-decoration: none; color:#aaafb2;" href="/src\static\pages\termsandconditions.html">Terms and Conditions</a> |
-         <a style="font-size: 12px; text-decoration: none; color:olivedrab;" href="/src\static\pages\accessibility.html">Accessibility</a> |
-         <a style="font-size: 12px; text-decoration: none; color:#aaafb2;" href="/src\static\pages\sources.php">Sources</a> | <a style="font-size:12px; text-decoration:none; color:#aaafb2;" href="/src/static/pages/csspolicy.php">Policies &amp; Procedures</a>
+         <a style="font-size: 12px; text-decoration: none; color:#aaafb2;" href="/src/static/pages/termsandconditions.html">Terms and Conditions</a> |
+         <a style="font-size: 12px; text-decoration: none; color:olivedrab;" href="/src/static/pages/accessibility.html">Accessibility</a> |
+         <a style="font-size: 12px; text-decoration: none; color:#aaafb2;" href="/src/static/pages/sources.php">Sources</a> | <a style="font-size:12px; text-decoration:none; color:#aaafb2;" href="/src/static/pages/csspolicy.php">Policies &amp; Procedures</a>
       </div>
       <span style="display:inline; margin-top: 20px;" >Pdubbs Solutions |  Administrative &amp; Project Management Services</span><br>
       <div style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); color: white; text-align: center;"></div>
@@ -62,7 +62,7 @@
    </footer>
 <script type="text/javascript" src="/src/index.mjs"></script>
 <script type="text/javascript" src="/src/app.js"></script>
-<script type="text/javascript" src="/src\static\pages\js\express.js"></script>
+<script type="text/javascript" src="/src/static/pages/js\express.js"></script>
 <script>
    function toggleTextarea() {
        var sessionOptions = document.getElementById("sessionOptions");
