--- a/src/static/pages/contact.html
+++ b/src/static/pages/contact.html
@@ -59,7 +59,7 @@
          </div>
    <script type="text/javascript" src="/src/index.mjs"></script>
    <script type="text/javascript" src="/src/app.js"></script>
-   <script type="text/javascript" src="/src\static\pages\js\express.js"></script><br>
+   <script type="text/javascript" src="/src/static/pages/js\express.js"></script><br>
    <footer> 
    <div class="ref-buttons">
       <a style="font-size: 12px; text-decoration: none; color:#aaafb2;" href="termsandconditions.html">Terms and Conditions</a> |
