--- a/src/static/pages/csspolicy.html
+++ b/src/static/pages/csspolicy.html
@@ -35,34 +35,35 @@
                   <span style="font-size: 14px; color: olivedrab;" class="bold">1. Grant of License for Downloadable Content </span><br>Upon purchase or authorized access, the company grants a limited, non-transferable, non-exclusive license to download and use the content solely for personal, non-commercial use. Reproduction, distribution, or public display of the content without prior written consent is prohibited.<br><br>
                   <span style="font-size: 14px; color: olivedrab;" class="bold">2. Access and Availability</span><br>Access to downloadable content is provided via source links. The company reserves the right to restrict or revoke access to content in cases of suspected unauthorized sharing, resale, or violation of this policy.<br><br>
                   <span style="font-size: 14px; color: olivedrab;" class="bold">3. Intellectual Property</span><br>All downloadable content remains the intellectual property of the company. Unauthorized use, sharing, or modification of the content is strictly prohibited and may result in legal action.<br><br>
-                  <span style="font-size: 14px; color: olivedrab;" class="bold">4. Technical Support</span><br>The company provides limited technical support for access issues related to downloadable content. Support inquiries can be directed to the company's customer service representative. <button  id="access" onclick="window.location.href='cssprocedure.html#header-1 '"  style="margin-left: 145px; margin-top: 5px;color:#a8738a; font-weight: bold; cursor: pointer; padding:0;  position:absolute;" href="cssprocedure.html">View Procedure</button>
+                  <span style="font-size: 14px; color: olivedrab;" class="bold">4. Technical Support</span><br>The company provides limited technical support for access issues related to downloadable content. Support inquiries can be directed to the company's customer service representative. <button  id="access" onclick="window.location.href='cssprocedure.html#header-1'" href="cssprocedure.html">View Procedure</button>
                </p>
              <h2 class="heading heading-container" id="heading-2">Account Registration &amp; Login</h2>
-             <p class="content content-paragraph active" id="content-2">
+             <p class="content content-paragraph" id="content-2">
                <span style="font-size: 14px; color: olivedrab;" class="bold">1. Account Creation Requirements</span><br>To access certain areas of the comapny's services, users are required to register for an account. Users must provide accurate, complete, and current information at registration.<br><br>
                <span style="font-size: 14px; color: olivedrab;" class="bold">2. Account Security and Responsibility</span><br>Users are responsible for maintaining the confidentiality of their account credentials and are liable for any actions taken under their account. The company is not liable for any loss due to unauthorized use of accounts.<br><br>
                <span style="font-size: 14px; color: olivedrab;" class="bold">3. Account Termination</span><br>The company reserves the right to suspend or terminate accounts for any misuse, false information, or breach of policy terms.<br><br>
                <span style="font-size: 14px; color: olivedrab;" class="bold">4. Age Requirements</span>Only individuals aged 16 years or older may register for an account. Parental consent is required for individuals under 16
-               <button  id="access1" onclick="window.location.href='cssprocedure.html#header-2'"  style="margin-left: 45px; margin-top: 5px;color:#a8738a; font-weight: bold; cursor: pointer; padding:0;  position:absolute;" href="cssprocedure.html">View Procedure</button>
+               <button  id="access1" onclick="window.location.href='cssprocedure.html#header-2'" href="cssprocedure.html">View Procedure</button>
              </p>
            
              <h2 class="heading heading-container" id="heading-3">Checkout &amp; Purchases</h2>
              <p class=" content content-paragraph" id="content-3">
-               <span style="font-size: 14px; color: olivedrab;" class="bold"></span><br>
-               <span style="font-size: 14px; color: olivedrab;" class="bold"></span><br>
-               <span style="font-size: 14px; color: olivedrab;" class="bold"></span><br>
-               <span style="font-size: 14px; color: olivedrab;" class="bold"></span><br>
-               <button  id="access2" onclick="window.location.href='cssprocedure.html#header-3'"  style="margin-left: 45px; margin-top: 5px;color:#a8738a; font-weight: bold; cursor: pointer; padding:0;  position:absolute;" href="cssprocedure.html">View Procedure</button>
+               <span style="font-size: 14px; color: olivedrab;" class="bold">1. Payment Processing</span><br>All payments are processed securly via authorized payment gateways. The company accepts PayPal, Stripe, Mastercard, Visa &amp; Debit. Charges will appear on the customer's statement under Pdubbs Solutions.<br><br>
+               <span style="font-size: 14px; color: olivedrab;" class="bold">2. Purchase Confirmation</span><br>Upon successful payment, a confirmation email with details of the transaction will be sent. For digital products, download links will be provided. <br><br>
+               <span style="font-size: 14px; color: olivedrab;" class="bold">3. Taxes and Fees</span><br>Prices listed exclude applicable taxes unless otherwise stated. All applicable taxes and fees will be displayed and applied at checkout. <br><br>
+               <span style="font-size: 14px; color: olivedrab;" class="bold">4. Order Cancellation and Refund Eligibility</span><br>All sales are final unless specified in the <a class="content-paragraph"  id="hoverable" href="#heading-10" style="color: inherit; font-weight: inherit; :hover {text-decoration: none; }">Refunds, Returns, &amp; Cancellation Policy</a>.
+               <button  id="access2" onclick="window.location.href='cssprocedure.html#header-3'" style="top:5px;" href="cssprocedure.html">View Procedure</button>
+               <script src="/src/static/pages/js\hoverable.js"></script>
              </p>
 
 
             <h2 class="heading heading-container" id="heading-4">Company Service Standards</h2>
             <p class="content content-paragraph" id="content-4">
+               <span style="font-size: 14px; color: olivedrab;" class="bold">1. </span><br>
                <span style="font-size: 14px; color: olivedrab;" class="bold"></span><br>
                <span style="font-size: 14px; color: olivedrab;" class="bold"></span><br>
                <span style="font-size: 14px; color: olivedrab;" class="bold"></span><br>
-               <span style="font-size: 14px; color: olivedrab;" class="bold"></span><br>
-               <button  id="access3" onclick="window.location.href='cssprocedure.html#header-5'"  style="margin-left: 45px; margin-top: 5px;color:#a8738a; font-weight: bold; cursor: pointer; padding:0;  position:absolute;" href="cssprocedure.html">View Procedure</button>
+               <button  id="access3" onclick="window.location.href='cssprocedure.html#header-5'" href="cssprocedure.html">View Procedure</button>
              </p>
 
             <h2 class="heading heading-container" id="heading-5">Customer Service Standards</h2>
@@ -71,7 +72,7 @@
                <span style="font-size: 14px; color: olivedrab;" class="bold"></span><br>
                <span style="font-size: 14px; color: olivedrab;" class="bold"></span><br>
                <span style="font-size: 14px; color: olivedrab;" class="bold"></span><br>
-               <button  id="access4" onclick="window.location.href='cssprocedure.html#header-5'"  style="margin-left: 45px; margin-top: 5px;color:#a8738a; font-weight: bold; cursor: pointer; padding:0;  position:absolute;" href="cssprocedure.html">View Procedure</button>
+               <button  id="access4" onclick="window.location.href='cssprocedure.html#header-5'" href="cssprocedure.html">View Procedure</button>
             </p>
 
             <h2 class="heading heading-container" id="heading-6">Digital Products</h2>
@@ -80,7 +81,7 @@
                <span style="font-size: 14px; color: olivedrab;" class="bold"></span><br>
                <span style="font-size: 14px; color: olivedrab;" class="bold"></span><br>
                <span style="font-size: 14px; color: olivedrab;" class="bold"></span><br>
-               <button  id="access5" onclick="window.location.href='cssprocedure.html#header-6'"  style="margin-left: 45px; margin-top: 5px;color:#a8738a; font-weight: bold; cursor: pointer; padding:0;  position:absolute;" href="cssprocedure.html">View Procedure</button>
+               <button  id="access5" onclick="window.location.href='cssprocedure.html#header-6'" href="cssprocedure.html">View Procedure</button>
             </p>
 
             <h2 class="heading heading-container" id="heading-7">Our Standards ~ Pdubbs Solutions</h2>
@@ -89,7 +90,7 @@
                <span style="font-size: 14px; color: olivedrab;" class="bold"></span><br>
                <span style="font-size: 14px; color: olivedrab;" class="bold"></span><br>
                <span style="font-size: 14px; color: olivedrab;" class="bold"></span><br>
-               <button  id="access6" onclick="window.location.href='cssprocedure.html#header-7'"  style="margin-left: 45px; margin-top: 5px;color:#a8738a; font-weight: bold; cursor: pointer; padding:0;  position:absolute;" href="cssprocedure.html">View Procedure</button></p>
+               <button  id="access6" onclick="window.location.href='cssprocedure.html#header-7'" href="cssprocedure.html">View Procedure</button></p>
 
             <h2 class="heading heading-container" id="heading-8">Payment Information Storage</h2>
             <p class="content content-paragraph" id="content-8">
@@ -97,7 +98,7 @@
                <span style="font-size: 14px; color: olivedrab;" class="bold"></span><br>
                <span style="font-size: 14px; color: olivedrab;" class="bold"></span><br>
                <span style="font-size: 14px; color: olivedrab;" class="bold"></span><br>
-               <button  id="access7" onclick="window.location.href='cssprocedure.html#header-8'"  style="margin-left: 45px; margin-top: 5px;color:#a8738a; font-weight: bold; cursor: pointer; padding:0;  position:absolute;" href="cssprocedure.html">View Procedure</button>
+               <button  id="access7" onclick="window.location.href='cssprocedure.html#header-8'" href="cssprocedure.html">View Procedure</button>
             </p>
 
             <h2 class="heading heading-container" id="heading-9">Products &amp; Pricing</h2>
@@ -106,7 +107,7 @@
                <span style="font-size: 14px; color: olivedrab;" class="bold"></span><br>
                <span style="font-size: 14px; color: olivedrab;" class="bold"></span><br>
                <span style="font-size: 14px; color: olivedrab;" class="bold"></span><br>
-               <button  id="access8" onclick="window.location.href='cssprocedure.html#header-9'"  style="margin-left: 45px; margin-top: 5px;color:#a8738a; font-weight: bold; cursor: pointer; padding:0;  position:absolute;" href="cssprocedure.html">View Procedure</button>
+               <button  id="access8" onclick="window.location.href='cssprocedure.html#header-9'" href="cssprocedure.html">View Procedure</button>
             </p>
 
             <h2 class="heading heading-container" id="heading-10">Refunds, Returns &amp; Cancellations</h2>
@@ -115,7 +116,7 @@
                <span style="font-size: 14px; color: olivedrab;" class="bold"></span><br>
                <span style="font-size: 14px; color: olivedrab;" class="bold"></span><br>
                <span style="font-size: 14px; color: olivedrab;" class="bold"></span><br>
-               <button  id="access9" onclick="window.location.href='cssprocedure.html#header-10'"  style="margin-left: 45px; margin-top: 5px;color:#a8738a; font-weight: bold; cursor: pointer; padding:0;  position:absolute;" href="cssprocedure.html">View Procedure</button>
+               <button  id="access9" onclick="window.location.href='cssprocedure.html#header-10'" href="cssprocedure.html">View Procedure</button>
             </p>
 
             <h2 class="heading heading-container" id="heading-11">Zoom 1:1, Group Session, &amp; In-Person/Virtual</h2>
@@ -124,7 +125,7 @@
                <span style="font-size: 14px; color: olivedrab;" class="bold"></span><br>
                <span style="font-size: 14px; color: olivedrab;" class="bold"></span><br>
                <span style="font-size: 14px; color: olivedrab;" class="bold"></span><br>
-               <button  id="access10" onclick="window.location.href='cssprocedure.html#header-11'"  style="margin-left: 45px; margin-top: 5px;color:#a8738a; font-weight: bold; cursor: pointer; padding:0;  position:absolute;" href="cssprocedure.html">View Procedure</button>
+               <button  id="access10" onclick="window.location.href='cssprocedure.html#header-11'" href="cssprocedure.html">View Procedure</button>
             </p>
          </div>
      </div>
@@ -155,19 +156,27 @@
 </script>
       <footer>
          <br>
-         <div style="display: inline; margin-top: 0px; text-decoration: none;"  class="auth-buttons"><a href="/src\static\pages\login.html">Login</a> | <a href="/src\static\pages\register.html">Register</a> | <a href="/src\static\pages\contact.html">Contact</a> | <a href="/src\static\pages\cart.html">Cart</a></div>
-         <br>
-         <div class="ref-buttons">
-            <a style="font-size: 12px; text-decoration: none; color:#aaafb2;" href="/src\static\pages\termsandconditions.html">Terms and Conditions</a> |
-            <a style="font-size: 12px; text-decoration: none; color:#aaafb2;" href="/src\static\pages\accessibility.html">Accessibility</a> |
-            <a style="font-size: 12px; text-decoration: none; color:#aaafb2;" href="/src\static\pages\sources.html">Sources</a> | <a style="font-size:12px; text-decoration:none; color:olivedrab;" href="/src/static/pages/csspolicy.html">Policies</a> | <a style="font-size:12px; text-decoration:none; color:#aaafb2;" href="/src/static/pages/cssprocedure.html"> Procedures</a>
-         </div>
+         <div class="auth-buttons" style="display: flex; gap: 10px; align-items: center; margin-top: 0; text-decoration: none;">
+            <a href="/src/static/pages/login.html">Login</a> | 
+            <a href="/src/static/pages/register.html">Register</a> | 
+            <a href="/src/static/pages/contact.html">Contact</a> | 
+            <a href="/src/static/pages/cart.html">Cart</a>
+        </div>
+        <br>
+        <div class="ref-buttons" style="display: flex; gap: 10px; font-size: 12px; align-items: center;">
+            <a style="text-decoration: none; color: #aaafb2;" href="/src/static/pages/termsandconditions.html">Terms and Conditions</a> |
+            <a style="text-decoration: none; color: #aaafb2;" href="/src/static/pages/accessibility.html">Accessibility</a> |
+            <a style="text-decoration: none; color: #aaafb2;" href="/src/static/pages/sources.html">Sources</a> |
+            <a style="text-decoration: none; color: olivedrab;" href="/src/static/pages/csspolicy.html">Policies</a> |
+            <a style="text-decoration: none; color: #aaafb2;" href="/src/static/pages/cssprocedure.html">Procedures</a>
+        </div>
+        
          <span style="display:inline; margin-top: 20px;" >Pdubbs Solutions |  Administrative &amp; Project Management Services</span><br>
          <div style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); color: white; text-align: center;"></div>
          <img style=" justify-content:center; max-width: 100px; padding: 0; max-height: 100px; left: 360px;margin-top: -20px; cursor: pointer;  z-index: -999; vertical-align: middle;  position:absolute;" src="/src/static/images/Pdubbs-Logo.jpg" alt="logo" class="logo" id="footer-logo" onclick="goHome()" />
       </footer>
    <script type="text/javascript" src="/src/index.mjs"></script>
    <script type="text/javascript" src="/src/app.js"></script>
-   <script type="text/javascript" src="/src\static\pages\js\express.js"></script>
+   <script type="text/javascript" src="/src/static/pages/js\express.js"></script>
    </body>
 </html>
