--- a/src/static/pages/termsandconditions.html
+++ b/src/static/pages/termsandconditions.html
@@ -275,7 +275,7 @@
   </body>
    <script type="text/javascript" src="/src/index.mjs"></script>
    <script type="text/javascript" src="/src/app.js"></script>
-   <script type="text/javascript" src="/src\static\pages\js\express.js"></script>
+   <script type="text/javascript" src="/src/static/pages/js\express.js"></script>
    <hr>
    <footer style="z-index: 999">
    <div class="ref-buttons">
