--- a/src/static/pages/sources.html
+++ b/src/static/pages/sources.html
@@ -79,7 +79,7 @@
 </body>
 <script type="text/javascript" src="/src/index.mjs"></script>
 <script type="text/javascript" src="/src/app.js"></script>
-<script type="text/javascript" src="/src\static\pages\js\express.js"></script>
+<script type="text/javascript" src="/src/static/pages/js\express.js"></script>
    <hr>
    <footer style="z-index: 999; font-family: 'Nunito';" >
    <div class="ref-buttons">
