--- a/public/index.html
+++ b/public/index.html
@@ -100,7 +100,7 @@
       </h1>
     </div>
   </header>
-  <body style="overflow:hidden;">
+  <body style="overflow:flex;">
    
     <nav>
       <div class="icon-container">
@@ -211,8 +211,8 @@
     <br />
     <div class="accordion" id="accordion">
       <div class="filter-container accordion" id="accordion1">
-        <div class="filter-item collapse show" id="mutliCollapse1" aria-labelledby="formHeader" data-parent="accordion1">
-          <h2 class="formHeader" onclick="toggleForm()">
+        <div class="filter-item  collapse show" id="mutliCollapse1" aria-labelledby="formHeader" data-parent="accordion1">
+          <h2 class="formHeader " onclick="toggleForm()">
             Submit a Custom Request
             <span style="color: #a8738a" class="arrow">➤</span>
           </h2>
@@ -270,7 +270,7 @@
                   name="document"
                   required
                 />
-                <button style="margin-left: 0px;" id="dashboardSubmit" type="submit">
+                <button style="margin-right: 10px;" id="dashboardSubmit" type="submit">
                   Submit Custom Request
                 </button>
               </form>
@@ -290,6 +290,7 @@
                 action="/requestSession"
                 method="POST"
                 enctype="multipart/form-data"
+                id="sessionForm"
               >
                 <input
                   type="text"
@@ -315,10 +316,13 @@
                 <input type="date" name="date" required /><br />
                 <input type="time" name="time" required /><br />
                 <div style="width: 80%; position:relative;" id="sessionOptions">
-                  <select class="sessionOptions" name="sessionOptions">
+                  <select onclick="toggleOptions(event)" id="sessionOptions1" name="sessionOptions" required>
+                    <option value=" " disabled selected hidden>Choose Option</option>
                     <option value="single">Single Session</option>
                     <option value="recurring">Request Recurring Sessions</option>
-                  </select>
+                </select>
+                <script src="/src/app.js"></script>
+
                 </div>
 
                 <button style="margin-left: 160px; position: relative;" 
@@ -336,9 +340,9 @@
             Request a Client &amp; Vendor Partnership
             <span style="color: #a8738a" class="arrow"> ➤ </span>
           </h2>
-          <section id="partnership" class="form-container" style="display: none">
+          <section id="partnership" class="form-container" style="display: none;">
             <div id="requestPartnership">
-              <form action="/requestPartnership" method="POST">
+              <form action="/requestPartnership" method="POST" style="overflow-y:show;">
                 <input
                   type="text"
                   autocomplete="organization"
@@ -451,9 +455,7 @@
     <script type="text/javascript" src="/src/static/pages/js\express.js"></script>
     <script>
       function toggleTextarea() {
-        var bookSession = document.getElementById("recurringTextarea");
-        var sessionOptions = document.getElementById("sessionOptions");
-        var recurringTextarea = document.getElementById("recurringTextarea");
+        var requestDocument = document.getElementById("requestDocument1");
         var partnership = document.getElementById("recurringTextarea1");
         if (sessionOptions.value === "recurring") {
           recurringTextarea.style.display = "block";
@@ -486,30 +488,6 @@
         });
       });
     </script>
-    <script>
-      document.addEventListener("DOMContentLoaded", function () {
-        const loadEl = document.querySelector("#load");
 
-        try {
-          let app = firebase.app();
-          let features = [
-            "auth",
-            "database",
-            "firestore",
-            "functions",
-            "messaging",
-            "storage",
-            "analytics",
-            "remoteConfig",
-            "performance",
-          ].filter((feature) => typeof app[feature] === "function");
-          loadEl.textContent = `Firebase SDK loaded with ${features.join(", ")}`;
-        } catch (e) {
-          console.error(e);
-          loadEl.textContent =
-            "Error loading the Firebase SDK, check the console.";
-        }
-      });
-    </script>
   </body>
 </html>
